[package]
name = "cch23-drflowerkick"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
base64 = "0.21.5"
rustemon = "3.2.1"
anyhow = "1.0.75"
