[package]
name = "cch23-drflowerkick"
version = "0.1.0"
edition = "2021"

[features]
default = ["all"]
past = []
current = []
all = ["past", "current"]

[dependencies]
axum = { version = "0.6.20", features = ["headers", "multipart", "ws"] }
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
base64 = "0.21.5"
rustemon = "3.2.1"
anyhow = "1.0.75"
tower-http = { version = "0.4.4", features = ["fs"] }
image = "0.24.7"
ulid = { version = "1.1.0", features = ["serde", "uuid"] }
chrono = "0.4.31"
shuttle-shared-db = { version = "0.35.1", features = ["postgres-rustls"] }
sqlx = { version = "0.7.3", features = ["postgres"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
emojis = "0.6.1"
sha256 = "1.4.0"
futures = "0.3.29"
tempfile = "3.8.1"
tar = "0.4.40"
cfg-if = "1.0.0"
s2 = "0.0.12"
dms-coordinates = "1.1.0"
country-boundaries = "1.2.0"
country-emoji = "0.2.0"
git2 = "0.18.1"
my_lib = { path = "../../mylib" }
